objects/AIA_Adjustment_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipName>Benefit_Design_Audit_Trails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Changed_Form__c</fullName>
        <label>Changed Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin form</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner Exception Request Form</fullName>
                </value>
                <value>
                    <fullName>Managed Care Program</fullName>
                </value>
                <value>
                    <fullName>PPACA</fullName>
                </value>
                <value>
                    <fullName>Product NAEGS</fullName>
                </value>
                <value>
                    <fullName>Ancillary form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_of_Change__c</fullName>
        <defaultValue>now()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date / Time of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Changed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Changed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal Notice - With Changes</fullName>
                </value>
                <value>
                    <fullName>Renewal Notice - No Change (Renewing As Is)</fullName>
                </value>
                <value>
                    <fullName>Benefit Adjustment</fullName>
                </value>
                <value>
                    <fullName>Administrative NAEGS</fullName>
                </value>
                <value>
                    <fullName>Adjustment Termination Notice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>ADS-{0000000000}</displayFormat>
        <label>ADS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>